update project name and associated files

--- a/src/class-productionalizing-notebooks.html
+++ b/src/class-productionalizing-notebooks.html
@@ -13159,7 +13159,7 @@ div#notebook {
 <li><a href="./unittest.ipynb">Testing</a></li>
 <li><a href="./git-workflow.ipynb">Git Workflow</a></li>
 <li><a href="./ml-productionalization-workflow.ipynb">ML Productionalization Workflow</a></li>
-<li><a href="./macys-project.ipynb">Productionalization Project</a></li>
+<li><a href="./our-project.ipynb">Productionalization Project</a></li>
 </ul>
 
 </div>
